--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         juegos
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="raimbow-six.html">rainbow-six</a>
+                        <a class="dropdown-item" href="raimbow.html">rainbow-six</a>
                         <a class="dropdown-item" href="#">apex legeds</a>
 
                         <a class="dropdown-item" href="#">Grand Turismo Sports</a>
@@ -59,10 +59,10 @@
     <div class="cartas-p   row col-md-12 col-lg-12">
         <div class="card-deck ">
             <div class="carta-1 card ">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="assets/imagenes/ps5.jpg " card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">ps5</h5>
+                <p class="card-text">sony nos muestra el precio y la fecha de su nueva consola .</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
               </div>
             </div>
