--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>noticias del mundo gaming </title>
     <link rel=stylesheet href="assets/css/main.css">
+    <link rel="shortcut icon" href="assets/icon/descargar.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
         integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
         crossorigin="anonymous" />
@@ -59,29 +60,29 @@
     <div class="cartas-p   row col-md-12 col-lg-12">
         <div class="card-deck ">
             <div class="carta-1 card ">
-              <img src="assets/imagenes/ps5.jpg " card-img-top" alt="...">
+              <img src="assets/imagenes/ps5.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">ps5</h5>
-                <p class="card-text">sony nos muestra el precio y la fecha de su nueva consola .</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <h5 class="card-title">ultimas noticias</h5>
+                <p class="card-text">sony nos muestra el precio y la fecha de lazamienti de su nueva consola.</p>
+                <a href="https://www.playstation.com/es-pa/ps5/" class="btn btn-primary">ir al sitio</a>
               </div>
             </div>
 
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card  lead-in to additional content.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <div class="carta-2 card">
+              <img src="assets/imagenes/H2x1_NSwitch_SuperMario3DAllstars_image1600w.jpg" class="card-img-top" alt="...">
+              <div class="body.card">
+                <h5 class="titulo">noticias nintendo</h5>
+                <p class="texto">nintendo nos sorprende con una nueva colceccion de mario all stars</p>
+                <a href="https://www.playstation.com/es-pa/ps5/" class="btn btn-primary">ir al sitio</a>
               </div>
             </div>
 
-            <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+            <div class="carta-3 card">
+                <img src="assets/imagenes/1542126633_583025_1542128160_noticia_normal.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This card  lead-in to additional content.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  <h5 class="card-title">PUBG inicia campaña en pro del cuidado de la salud mental</h5>
+                  <p class="card-text">El Battle Royale hizo un llamado a poner atención y empatizar con los jugadores</p>
+                  <a href="#pug" class="btn btn-primary">noticia completa</a>
                 </div>
               </div>
 
@@ -97,6 +98,7 @@
           </div>
         </div>
 
+        <center>
             <!--  noticias -->
             <h2 class="sombra text-center ">Noticias, trailer, gameplay, imágenes de juegos recientes
             </h2><br>
@@ -111,7 +113,7 @@
                 <p>
                     Ubisoft acaba de lanzar la nueva temporada de Rainbow Six: Siege: Shadow Legacy. Un nuevo parche de
                     contenido que incluirá a Sam Fisher, conocido como el operador Zero.</p>
-                <a href="https://www.ubisoft.com/es-mx/game/rainbow-six/siege/game-info/seasons/shadowlegacy">
+                <a href="http://127.0.0.1:5500/raimbow.html.#raimbow">
                     <link class="new">leer mas.....</link>
                 </a>
             </div><br>
@@ -134,6 +136,7 @@
                     llegará también a PS4.</p>
 
             </div><br>
+            <hr>
 
             <div class="devil">
                 <h1> Capcom anuncia devil may cry 5 Special Edition
@@ -150,6 +153,48 @@
                     PlayStation 5, Xbox Series X y Xbox Series S
                 </p>
             </div><br>
+            <hr>
+
+               <div id="pug">
+            <div class="pug">
+
+                <h1> PUBG inicia campaña en pro del cuidado de la salud mental</h1>
+                <img src="assets/imagenes/1542126633_583025_1542128160_noticia_normal.jpg" class="card-img-top" alt="...">
+
+                <p> Aunque en su mayoría es asociado con la diversión, el gaming,
+                     en específico su experiencia multijugador, es considerado también
+                      como un espacio tóxico con presencia de jugadores y sectores que 
+                      solo buscan molestar, ofender y violentar verbal y mentalmente a 
+                      otros usuarios. Las compañías siguen luchando contra esta problemática
+                       de distintas formas, pero también es importante que los mismos juegos alcen
+                        la voz, tal como lo hizo</p>
+                        
+                        <h2> PLAYERUNKNOWN'S BATTLEGROUNDS.</h2>
+
+                        <p> A través de unos cambios en su canal oficial de Facebook,
+                             PUBG inició una campaña en pro de la salud mental, de inicio
+                              acompañando el logotipo oficial del Battle Royale con un listón
+                               amarillo, mismo que ha sido usado en la época actual como símbolo 
+                               para poner atención en una problemática que va creciendo en todo 
+                               el mundo. Luego, la cuenta oficial de PUBG acompañó su campaña
+                                con las siguientes palabras: "soldados, el lazo amarillo se colocó 
+                                porque para nosotros en PUBG es importante darle visualización a 
+                                las problemáticas de Salud Mental. Nadie sabe si la persona que
+                                 está jugando detrás de la pantalla no se siente bien emocionalmente,
+                                  o está pasando por una situación difícil.
+                            Por eso buscamos promover que PUBG sea un juego donde prime la sana 
+                                convivencia, el respeto, camaradería y diversión entre todos sus jugadores".</p>
+
+
+            </div>
+        </div>
+        </center>
+
+
+
+
+
+
 
 
 
